--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div id="page3">
-            <video src="1st vdo.mov" autoplay muted loop></video>
+            <video src="1st vdo.mp4" autoplay muted loop></video>
         </div>
         <div id="page4">
             <h1><i class="fa-brands fa-apple"></i>Vision Pro</h1>
